--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-   
-   
 }
 .mainSection{
     position: relative;
@@ -14,23 +12,16 @@ h1{
     display: flex;
     justify-content: center;
     font-size: 3.5rem;
-  
 }
 h2{
-    font-size: 2rem; 
+    font-size: 2rem;
 }
 
-.mainBlock {
-      
- 
-}
 .myName {
-    
     font-size: 3rem;
     display: flex;
     justify-content: center;
     padding-bottom: 1rem;
-    
 }
 .aboutMe {
     padding-bottom: 1rem;
@@ -38,8 +29,6 @@ h2{
     padding-left: 1rem;
     display: flex;
     font-size: 2rem;
-    
-    
 }
 ol {
     padding-bottom: 1rem;
@@ -65,6 +54,18 @@ li{
     display: flex;
     width: 500px;
     height: 500px;
-   
 
+}
+footer{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    font-size: 2rem;
+}
+footer a{
+    text-decoration: none;
+}
+svg{
+    margin-left: 1rem;
+    width: 4rem;
 }
