--- a/style.css
+++ b/style.css
@@ -72,8 +72,10 @@ footer a{
     text-decoration: none;
 }
 svg{
+    display: flex;
     margin-left: 1rem;
-    width: 4rem;
+    width: 50px;
+    height: 50px;
 }
 p{
     font-size: 2rem;
