--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .mainSection{
-   
+
     width: 60%;
     margin: 0 auto;
 }
@@ -42,7 +42,7 @@ li{
 }
 .listAndFoto{
     margin: 0 auto;
-    width: 60%;
+    
     padding-top: 2rem;
     display: flex;
     justify-content: center;
@@ -56,7 +56,7 @@ li{
     flex-direction: column;
 }
 .myFoto{
-    
+    padding-left: 1rem;
     display: flex;
     width: 500px;
     height: 500px;
@@ -64,6 +64,7 @@ li{
 }
 footer{
     display: flex;
+    align-items: center;
     justify-content: center;
     margin: 0 auto;
     font-size: 2rem;
@@ -74,14 +75,20 @@ footer a{
 svg{
     display: flex;
     margin-left: 1rem;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 70px;
 }
 p{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
     font-size: 2rem;
     font-weight: 500;
 }
 pre{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
     font-size: 1.75rem;
